--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "rollup -c -w"
+    "dev": "rollup -c -w",
+    "serve": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,9 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "reflect-metadata": "^0.2.2"
+    "axios": "^1.7.3",
+    "express": "^4.19.2",
+    "reflect-metadata": "^0.2.2",
+    "tslib": "^2.6.3"
   }
 }
