--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "rollup -c -w"
+    "dev": "rollup -c -w",
+    "serve": "nodemon src/18_axios/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/qs": "^6.9.16",
     "rollup": "^4.18.1",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^1.1.1",
@@ -20,6 +22,9 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.0",
+    "qs": "^6.13.0",
     "reflect-metadata": "^0.2.2"
   }
 }
