--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/qs": "^6.9.16",
     "rollup": "^4.18.1",
@@ -24,6 +25,7 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
+    "parse-headers": "^2.0.5",
     "qs": "^6.13.0",
     "reflect-metadata": "^0.2.2"
   }
